--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-.env
-*.pdf
-*.png
-__pycache__/
-.venv/
-.venvsource/
+#Ignore everything
+*
+
+#EXCEPT these files
+!.gitignore
+!README.md
+!pdftotext_test.py
+!pdftotext.py
+!requirements.txt
